ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: food-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost   # replace with your real domain
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: food-web-service   # your Service name
            port:
              number: 80
